# cowork-athon-ghc

./: .env.example  .gitattributes  .gitignore  AGENT-HARNESS.md  AGENTS.md  AGY-handover.md  AUDIT_TEMPLATE.md  BUILD_EXECUTION_PLAN.md  BUILD_EXECUTION_REPORT.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CODE-REVIEW-COMPLETE.md  Dockerfile  E2E_TESTING_GUIDE.md  README.md  RELEASE_PACKAGE_GUIDE.md  RUN_BUILD_NOW.md  TASK_COMPLETION_CRITERIA.md  agent-harness-plan.md  build-release.ps1  cowork-ghc-presentation.html  docker-compose.yml  electron-builder.config.cjs  electron-builder.yml  esbuild.config.mjs  index.html  package-lock.json  package.json  project-memory.md  skills-lock.json  tsconfig.base.json  tsconfig.json
.agent-workflow/: loops.yaml  workflow.yaml
.agent-workflow/contracts/: delegation.md  review-output.md  verification-output.md
.agent-workflow/roles/: code-reviewer.md  frontend-desktop-engineer.md  loop-engineer-lead.md  product-architect.md  release-verifier.md  repository-researcher.md  runtime-llm-engineer.md  security-reviewer.md  test-engineer.md  ux-performance-reviewer.md
.agent-workflow/schemas/: loop.schema.json  project-state.schema.json  task.schema.json
.claude/: launch.json  settings.json
.claude/agents/: code-reviewer.md  frontend-desktop-engineer.md  product-architect.md  release-verifier.md  repository-researcher.md  runtime-llm-engineer.md  security-reviewer.md  speckit-bug-investigator.md  speckit-checklist.md  speckit-implementer.md  speckit-planner.md  test-engineer.md  ux-performance-reviewer.md
.claude/rules/: architecture.md  coding.md  documentation.md  frontend.md  security.md  testing.md
.clinerules/agents/: checklist-updater.md  phase-validator.md  task-executor.md  task-loader.md  task-validator.md
.clinerules/hooks/: TaskStart  session-end.sh  session-start.sh  task-complete.sh
.clinerules/modes/: speckit-implementer.md
.clinerules/workflows/: implementation-workflow.md
.github/: copilot-instructions.md
.github/workflows/: onnx-integration.yml  package-release.yml  system-test.yml  test.yml
.loop-engineer/: HANDOFF.md  MANIFEST.md  STATUS.md  TASKS.md
.loop-engineer/checkpoints/: .gitkeep  L0-COMPLETED.yaml  L1-COMPLETED.yaml  L2-COMPLETED.yaml  L3-COMPLETED.yaml  L4-COMPLETED.yaml  L5-COMPLETED.yaml  L6-cghc-014-done.yaml  L6-cghc-015-done.yaml  L6-cghc-016-done.yaml  L6-cghc-017-done.yaml  L6-cghc-018-done.yaml  L6-cghc-020-done.yaml  L6-cghc-024-done.yaml  L6-cghc-025-done.yaml  L6-cghc-026-done.yaml  L6-cghc-028-launch-fix.yaml  L6-cghc-028-partial.yaml  L6-composition-root-tier1.yaml  L6-credential-gate-ready.yaml  L6-electron-scaffold.yaml  L6-onboarding-wave1.yaml  L6-wave-1.yaml  L6-wave-2.yaml  L6-wave-3a.yaml  L6-wave-3b.yaml  L6-wave-3b2.yaml  L6-wave-frontend-a.yaml
.loop-engineer/evidence/: CGHC-008-slice2-packaged-workspace.md  CGHC-008-workspace-picker.md  CGHC-011-slice3-packaged-provider-credential.md  CGHC-014-two-hop-streaming.md  CGHC-015-ev-timeline-live-stream.md  CGHC-016-permission-enforcement.md  CGHC-017-permission-ui.md  CGHC-018-file-mutation-audit.md  CGHC-019-model-config-switch.md  CGHC-020-provider-error-mapping.md  CGHC-022-settings-store.md  CGHC-024-live-capture.md  CGHC-025-coldstart-renderer-hardening.md  CGHC-026-runtime-extensions.md  CGHC-028-huytt12-gui-packaged.md  CGHC-028-l6-packaged-acceptance.md  CGHC-028-packaged-launch-fix.md  CGHC-028-release-verification.md  CGHC-028-slice1-packaged-service-lifecycle.md  CGHC-028-slice4-packaged-opencode-session.md  bootstrap-packaged-settings-only-boot.md  composition-root-tier1.md
.loop-engineer/reports/: discovery-report.md  docs-language-audit.md  requirements-baseline-review.md
.loop-engineer/state/: STATUS.md  TASKS.md  current-run.yaml  loops.yaml  project-state.yaml  tasks.yaml
.scratch/: req204-pm-overview.html  req204-presentation.html
.specify/: config.yaml  extensions.yml  feature.json  init-options.json
.specify/context/: bug-005-all.md  bug-011-all.md  bug-011-copilot-1.md  bug-011-copilot-2.md  bug-011-copilot-3.md  bug-011-copilot.md  task-bug-005-01.md  task-bug-005-02.md  task-bug-010-01.md  task-bug-010-02.md  task-bug-010-03.md  task-bug-010-04.md  task-bug-010-05.md  task-bug-010-06.md  task-bug-010-07.md  task-test-002.md  task-test-004.md
Frontend/: README.md  package-lock.json  package.json
app/llm-svc/: COMPILE_ON_SEPARATE_PC.md  Cargo.toml  GROUP_I_PHASE_1_COMPLETION.md  IMPLEMENTATION.md  ML_ENHANCEMENTS.md  PHASE_1_SUMMARY.txt  README.md  build.rs
app/llm-svc/proto/: llmsvc.proto
app/llm-svc/src/: cloud_proxy.rs  config.rs  lib.rs  main.rs  routing.rs  service.rs
app/llm-svc/src/models/: gguf.rs  mod.rs  onnx.rs  safetensors.rs
app/llm-svc/tests/: embedding_trust_test.rs  integration_real_models.rs
backend/: go.mod  go.mod.backup  go.sum
checklist/: as-is.md  dispatch-fanout.md  remote-gateway-pwa.md  to-be.md
docs/: README.md  design.excalidraw  design.md  llm-config-security-design.md  microsoft-365-setup-manual.md  openwork-requirements-and-basic-design.md
llm-svc/: Cargo.toml  models.yaml
llm-svc/src/: cloud_proxy.rs  config.rs  lib.rs  main.rs  models.rs  routing.rs  service.rs
llm-svc/src/models/: gguf.rs  mod.rs  onnx.rs  safetensors.rs
llm-svc/tests/: smoke_test.rs
project-harness/: orchestrator.yaml  routing-rationale.md
reports/: cowork-ghc-current-status-report.html
review/: idea.md  reviewer.md
runtime/: package-lock.json  package.json  tsconfig.json
scripts/: README.md  build-backend.bat  build-llm-svc-auto.bat  build-llm-svc-simple.bat  build-llm-svc-verbose.bat  build-llm-svc.bat  build.bat  check-msvc.ps1  clean.bat  cleanup-manifest.json  debug.ps1  demo-reset.bat  demo-seed.bat  ensure-protoc.ps1  fetch-model.ps1  fetch-vendors.ps1  find-vs-2026.bat  fix-line-endings.ps1  fix-tdm-gcc-libgcc-eh.ps1  init.bat  release-package-full.bat  set-provider-key.bat  setup-env-2022.bat  start.bat  stop.bat  vendor-download.ps1  verify-fast.bat
service/: package.json  tsconfig.json
specs/: AUDITS.md  BUG_FIX_SUMMARY.md
src/main/: ipc.ts  (+5 more)
(+1745 files in other folders)
