[package]
name = "llm-svc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
config = { version = "0.13", features = ["toml"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"

# Model inference (ONNX, GGUF, safetensors) - stubs for Phase 1, real impl in Phase 2
# ort = "2.0"  # ONNX Runtime - Phase 2 implementation
# llama-cpp-2 = "0.1"  # GGUF - Phase 2 implementation
# candle-core = { version = "0.3", features = ["cuda"] }  # safetensors - Phase 2 implementation

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.10"

[lib]
name = "llm_svc"
path = "src/lib.rs"

[[bin]]
name = "llm-svc"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
