[package]
name = "llm-svc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
config = { version = "0.13", features = ["toml"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"

# Model inference: ONNX (T160) and GGUF (T161) are production-ready.
# Safetensors (T162) deferred to v2.0 due to candle dependency conflicts.
# - ONNX via ort crate: Local CPU inference
# - GGUF via llama-gguf crate: Pure Rust, no C++ needed
# - Safetensors via candle: Deferred (dependency resolution needed in v2.0)
ort = "2.0.0-rc.12"
tokenizers = "0.23.1"
ndarray = "0.17.2"
llama-gguf = "0.14"  # T161: Pure Rust GGUF inference without cmake

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.10"

[lib]
name = "llm_svc"
path = "src/lib.rs"

[[bin]]
name = "llm-svc"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
